# ascii-convert-gui

./: .gitignore  2.txt  CMakeLists.txt  README.md  cmake_install.cmake
src/: ascii-convert.cpp  func.h  func.py  main.cpp  main.py
